2017-08-06  Shunsaku Hirata  <shunsaku.hirata74@gmail.com>

	* dpxutil.[ch], epdf.c, pdfdoc.[ch], pdfximage.c, xbb.c:
	Support for /Rotate page attribute in PDF inclusion.
	configure.ac: Version 20170806.

2017-06-27  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>

	* pdfdoc.c: Simplify the change in pdf_doc_get_page().
	* configure.ac: Change version number to distinguish from TL 2017.

2017-06-25  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>

	* pdfdoc.c: Discard the backward compatibility for pdf BoundingBox
	in pdf_doc_get_page(), to be consistent with the latex
	driver dvipdfmx.def.

2017-06-25  Shunsaku Hirata  <shunsaku.hirata74@gmail.com>

	* tt_cmap.c: Fix a bug that different CMaps are not attached
	to each instances of font using different OpenType layout features.
	Fix a bug that ToUnicode support for substituted glyph was incomplete.

2017-06-24  Shunsaku Hirata  <shunsaku.hirata74@gmail.com>

	* spc_pdfm.c: Remove unused variable attr in spc_handler_pdfm_image().

2017-05-19  Karl Berry  <karl@tug.org>

	* Version 20170318 for TeX Live 2017 release.

2017-05-08  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>

	* pdfdraw.c: Replace a small number 1.0e-8 by OUR_EPSILON = 2.5e-16,
	responding incompletely to
	http://tug.org/pipermail/tex-live/2017-May/040090.html.

2017-04-26  Paul Vojta  <vojta@math.berkeley.edu>

	* dvi.c, dvipdfmx.c, spc_html.c, spc_util.c: Support additional
	length units.

2017-04-16  Shunsaku Hirata  <shunsaku.hirata74@gmail.com>

	* tt_cmap.c: Fix a bug that generation of GID to CID mapping for
	format 2 CFF charsets was wrong. "unicode" encoding support was
	broken for fonts using this format.

2017-04-15  Shunsaku Hirata  <shunsaku.hirata74@gmail.com>

	* fontmap.c, tt_cmap.c, tt_gsub.c, tt_gsub.h, pdffont.c: Removed
	undocumented OpenType Layout GSUB support.  Added simplified version of
	OpenType Layout GSUB support. Fontmap option "-l otl_tags" enables
	OpenType GSUB features specified by otl_tags, where otl_tags is a ":"